--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   table_calendar: ^2.3.3
   timeago:
   url_launcher:
+  syncfusion_flutter_charts: ^19.1.54
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
