--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   shared_preferences: ^2.0.6
+  image: ^2.1.18
 
 dev_dependencies:
   flutter_launcher_icons: ^0.8.1
 
   flutter_test:
     sdk: flutter
+  flutter_blue: ^0.7.3
+
 
 
 flutter_icons:
