--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,8 @@ flutter:
     - assets/images/
     - assets/videos/
     - assets/audios/
-    - assets/postureprediction_tree.json
+    - assets/model/
+    - assets/model/hi.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
