--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  path_provider:
   auto_size_text: ^3.0.0-nullsafety.0
   cached_network_image: ^3.0.0
   font_awesome_flutter: ^9.1.0
@@ -43,7 +44,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   shared_preferences: ^2.0.6
-  image: ^3.0.2  #^3.0.0-nullsafety.0
+  image: ^3.0.2
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
