--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,19 +36,21 @@ dependencies:
   timeago: ^3.1.0
   url_launcher: ^6.0.9
   syncfusion_flutter_charts: ^19.2.47
-  # hive database
-  hive: ^2.0.4
-  hive_flutter: ^1.1.0
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
   shared_preferences: ^2.0.6
   image: ^3.0.2 #null-safe
   sklite:
     git:
       url: https://github.com/axegon/SkLite-dart.git
 
+  # hive database
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  #json_annotation:
+  #json_serializable:
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.0
