--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,10 @@ dependency_overrides:
 
 flutter_icons:
   android: true
-  ios: true
-  image_path: 'assets/images/Logo2.png'
+  ios: false
+  image_path: 'assets/images/app_icon.png'
+  adaptive_icon_background: "assets/images/app_icon_back.png"
+  adaptive_icon_foreground: "assets/images/app_icon_fore.png"
 
 
 # For information on the generic Dart part of this file, see the
